...
            "state": "translated",
            "value": "Всё готово"
          }
        }
      }
    },
    "Allow": {
      "extractionState": "manual",
      "localizations": {
        "de": {
          "stringUnit": {
            "state": "translated",
            "value": "Erlauben"
...
            "state": "translated",
            "value": "Оформление"
          }
        }
      }
    },
    "Apps": {
      "extractionState": "manual",
      "localizations": {
        "de": {
          "stringUnit": {
            "state": "translated",
            "value": "Apps"
...
            "state": "translated",
            "value": "Робот Lite или симулятор"
          }
        }
      }
    },
    "Live": {
      "extractionState": "manual",
      "localizations": {
        "de": {
          "stringUnit": {
            "state": "translated",
            "value": "Live"
...
            "state": "translated",
            "value": "Двигаться при разговоре"
          }
        }
      }
    },
    "Moves": {
      "extractionState": "manual",
      "localizations": {
        "de": {
          "stringUnit": {
            "state": "translated",
            "value": "Bewegungen"
...
            "state": "translated",
            "value": "Правая"
          }
        }
      }
    },
    "Robot": {
      "extractionState": "manual",
      "localizations": {
        "de": {
          "stringUnit": {
            "state": "translated",
            "value": "Roboter"
...
            "state": "translated",
            "value": "Для настройки робота нужен Bluetooth."
          }
        }
      }
    },
    "Settings": {
      "extractionState": "manual",
      "localizations": {
        "de": {
          "stringUnit": {
            "state": "translated",
            "value": "Einstellungen"
...
